force-app/src/objects/c2g__SummarizationTemplate__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpsummarizationtemplate</customHelpPage>
    <description>This object is deprecated.</description>
    <fields>
        <fullName>c2g__ApexJobId__c</fullName>
        <label>Apex Job Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__BatchProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch Process</label>
        <referenceTo>c2g__fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>SummarizationTemplates</relationshipLabel>
        <relationshipName>SummarizationTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Destination__c</fullName>
        <description>The destination SObject, i.e. the table in which the summarization template is held.</description>
        <label>Destination</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Filter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Filter</label>
        <referenceTo>c2g__Filter__c</referenceTo>
        <relationshipLabel>SummarizationTemplates</relationshipLabel>
        <relationshipName>SummarizationTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__LastSuccessfulBuild__c</fullName>
        <label>Last Successful Build</label>
        <summarizedField>c2g__SummarizationRunInformation__c.c2g__EndTime__c</summarizedField>
        <summaryForeignKey>c2g__SummarizationRunInformation__c.c2g__SummarizationTemplate__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__NotificationType__c</fullName>
        <formula>IF(AND(c2g__TotalNumberOfErrors__c=0,c2g__TotalNumberOfAborts__c=0,c2g__TotalNumberOfExternal__c=0), 
&apos;Successful&apos;, 
IF(c2g__TotalNumberOfErrors__c = c2g__TotalNumberOfLogs__c, 
&apos;Failure&apos;, 
IF(c2g__TotalNumberOfAborts__c &gt; 0, 
&apos;Failure&apos;, 
IF( c2g__TotalNumberOfExternal__c &gt; 0, 
&apos;Failure&apos;, 
&apos;Mixed&apos; 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notification Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ObjectToObjectMap__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The object to object map that this summarization template is based on.</description>
        <label>ObjectToObjectMap</label>
        <referenceTo>c2g__ObjectToObjectMap__c</referenceTo>
        <relationshipLabel>SummarizationTemplates</relationshipLabel>
        <relationshipName>SummarizationTemplates</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SourceDataview__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The dataview that acts as the source of the field names for this summarization template.</description>
        <label>Dataview</label>
        <referenceTo>c2g__DataView__c</referenceTo>
        <relationshipLabel>Su</relationshipLabel>
        <relationshipName>SummarizationTemplates</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__TotalNumberOfAborts__c</fullName>
        <label>Total Number of Aborts</label>
        <summaryFilterItems>
            <field>c2g__SummarizationLog__c.c2g__LogType__c</field>
            <operation>equals</operation>
            <value>Abort</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__SummarizationLog__c.c2g__SummarizationTemplate__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__TotalNumberOfErrors__c</fullName>
        <label>Total Number of Errors</label>
        <summaryFilterItems>
            <field>c2g__SummarizationLog__c.c2g__LogType__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__SummarizationLog__c.c2g__SummarizationTemplate__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__TotalNumberOfExternal__c</fullName>
        <label>Total Number of External</label>
        <summaryFilterItems>
            <field>c2g__SummarizationLog__c.c2g__LogType__c</field>
            <operation>equals</operation>
            <value>External</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__SummarizationLog__c.c2g__SummarizationTemplate__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__TotalNumberOfLogs__c</fullName>
        <label>Total Number of Logs</label>
        <summaryForeignKey>c2g__SummarizationLog__c.c2g__SummarizationTemplate__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>zDeprecated:Summarization Template</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__SourceDataview__c</columns>
        <columns>c2g__Status__c</columns>
        <columns>c2g__LastSuccessfulBuild__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Summarization Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>